--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "admin/nhatky",
+    "name": "admin/php2",
     "autoload": {
         "psr-4": {
-            "App\\": "App/"
+            "Admin\\Php2\\": "src/"
         }
     },
     "authors": [
